--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,35 @@
-#Orchestration
+# Core
+python-dotenv>=1.0.0
+pydantic>=2.5.0
 
-apache-airflow==2.8.1 #Check la version du airflow !!!!!!
+# Data manipulation
+numpy>=1.24.0
+pandas>=2.0.0
+scipy>=1.10.0
 
-# Aws et cloud
-boto3                   #SDK AWS POUR S3
-python-dotenv           #Pour gérer le fichier .env en local V
+# Machine Learning
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+imbalanced-learn>=0.11.0
 
-#Datascience et ml
-pandas                  #Manip des données V
-numpy                   #Calcul numérique V
-scikit-learn            #préprocessing et modèle
-matplotlib              #Visualisation (pour notebook)
+# Model tracking & MLOps
+mlflow>=2.9.0
+evidently>=0.4.15
 
-#utils
-pytest                  #pour les test unitaire V
+# Orchestration
+apache-airflow-providers-amazon>=8.0.0
+
+# API / Serving
+fastapi>=0.110.0
+uvicorn>=0.27.0
+requests>=2.31.0
+
+# Serialization
+joblib>=1.3.0
+
+# Visualization / reports (Evidently, debug)
+matplotlib>=3.8.0
+seaborn>=0.13.0
+
+# Testing
+pytest>=7.4.0
